--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/razonpayPayment.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/razonpayPayment.css
@@ -87,6 +87,11 @@ body{
 
 }
 
+#paymentBtn:hover{
+    background-color: rgb(15, 141, 105);
+    color: #fff;
+}
+
 
 strong {
     text-transform: capitalize;
