--- a/backend/pratise backend/practice project pin/pin/views/catringPrduct/partial/cHeader.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catringPrduct/partial/cHeader.ejs
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="/stylesheets/cHeader.css">
 </head>
 
-<body>
+<body class="not-loaded">
+    <div id="preloader">Loading...</div>
+
+    
     <h4 id="headingText">We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if
         you have any
         questions.</h4>
