--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
@@ -165,6 +165,22 @@ body::-webkit-scrollbar-thumb{
 }
 
 
+/* altet massage donation succefully add*/
+.Alertmassage{
+    text-transform: capitalize;
+    font-size: 1.5vw;
+    color:green;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: 999;
+    padding-bottom: 50px;
+     
+  }
+
+
 
 
 
@@ -276,6 +292,11 @@ body::-webkit-scrollbar-thumb{
         font-size: 3vw;
         /* background-color: rebeccapurple; */
     }
+
+
+    .Alertmassage{
+        font-size: 4vw;
+      }
     
 
     
