--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/cHeader.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/cHeader.css
@@ -1,3 +1,24 @@
+body { 
+    opacity: 0; 
+    transition: opacity 0.5s ease-in-out;
+}
+
+body.loaded { 
+    opacity: 1; 
+}
+
+#preloader {
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%;
+    height: 100%; 
+    background: white; 
+    z-index: 9999;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+}
 
 
 h4{
