--- a/backend/pratise backend/practice project pin/pin/views/catringPrduct/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catringPrduct/catering.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="/stylesheets/catering.css">
     <!-- <link rel="stylesheet" href=""> -->
-    
+
 
 
     <!-- searchbar -->
@@ -58,11 +58,13 @@
             <div class="card card5">
                 <h3>BIO DISPOSABLES</h3>
             </div>
-            <div  class="card card6">
+            <div class="card card6">
                 <h3>INDIVIDUALLY PACKAGED MEALS</h3>
             </div>
         </div>
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-<!-- <script src="/javascripts/catring.js"></script> -->
-<% include .//../catringPrduct/partial/cFooter.ejs %>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <!-- <script src="/javascripts/catring.js"></script> -->
+
+    <% include .//../catringPrduct/partial/cFooter.ejs %>
