--- a/backend/pratise backend/practice project pin/pin/views/donate.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/donate.ejs
@@ -1,5 +1,21 @@
 <% include ./partial/header.ejs %>
-<link rel="stylesheet" href="/stylesheets/donate.css">
+    <link rel="stylesheet" href="/stylesheets/donate.css">
+
+    <div class="Alertmassage">
+        <!-- In your donate.ejs or corresponding template file -->
+        <% if (successMessage) { %>
+            <div id="flash-message" class="alert alert-success">
+                <%= successMessage %>
+            </div>
+            <% } %>
+
+                <% if (errorMessage) { %>
+                    <div id="flash-message" class="alert alert-danger">
+                        <%= errorMessage %>
+                    </div>
+                    <% } %>
+    </div>
+
 
     <div class="menu">
 
@@ -38,31 +54,33 @@
         <!-- donation amount page -->
         <div class="bar">
             <button class="btn">back to menu</button>
-            <h5>THANK YOU FOR DONATING TO THE TWO GOOD FOUNDATION. YOU ARE HELPING TO CHANGE THE COURSE OF A WOMAN'S
+            <h5>THANK YOU FOR DONATING TO THE TWO GOOD FOUNDATION. YOU ARE HELPING TO CHANGE THE COURSE
+                OF A WOMAN'S
                 LIFE FOR GOOD.</h4>
-            <div class="card">
-                <h4>DONATING IN INDIAN RUPEES</h4>
-                <div class="card1">
-                    <h3><span class="s1">One-Time </span><span class="s2">Weekly </span><span class="s3">Monthly</span></h3>
+                <div class="card">
+                    <h4>DONATING IN INDIAN RUPEES</h4>
+                    <div class="card1">
+                        <h3><span class="s1">One-Time </span><span class="s2">Weekly </span><span
+                                class="s3">Monthly</span></h3>
+                    </div>
+                    <div class="card2">
+                        <a class="amt" href="#">&#x20B9;264</a>
+                        <a class="amt2" href="#">&#x20B9;528</a>
+                        <a href="#">&#x20B9;1319</a>
+                        <a href="#">&#x20B9;2639</a>
+                    </div>
+                    <div class="part">
+                        <a href="#">&#x20B9;5278</a>
+                        <a href="#">&#x20B9;10,555</a>
+                    </div>
+                    <form action="/donate2" method="post">
+                        <div class="card3">
+                            <textarea name="donate" id="donate" cols="1" rows="1"> &#x20B9;</textarea>
+                        </div>
+                        <input type="submit" value="Submit">
+                    </form>
+                    <h2 class="textmessage">DONATION TOW GOOD FOUNDATION ARE TAX DEDUCTEBLE</h2>
                 </div>
-                <div class="card2">
-                    <a class="amt" href="#">&#x20B9;264</a>
-                    <a class="amt2" href="#">&#x20B9;528</a>
-                    <a href="#">&#x20B9;1319</a>
-                    <a href="#">&#x20B9;2639</a>
-                </div>
-                <div class="part">
-                    <a href="#">&#x20B9;5278</a>
-                    <a href="#">&#x20B9;10,555</a>
-                </div>
-                <form action="/donate2" method="post">
-                <div class="card3">
-                    <textarea name="donate" id="donate" cols="1" rows="1"> &#x20B9;</textarea>
-                </div>
-                <input type="submit" value="Next">
-            </form>
-                <h2 class="textmessage">DONATION TOW GOOD FOUNDATION ARE TAX DEDUCTEBLE</h2>
-            </div>
         </div>
     </div>
 
@@ -70,19 +88,35 @@
     <!-- javascript functionality -->
     <script>
 
-        // Selection dome query
-       let amt =  document.querySelector(".amt");
-       let amt2 =  document.querySelector(".amt2");
-       let donate =  document.querySelector("#donate");
+        // Selection dom query
+        let amt = document.querySelector(".amt");
+        let amt2 = document.querySelector(".amt2");
+        let donate = document.querySelector("#donate");
 
-       amt.addEventListener("click",()=>{
-        donate.innerHTML = " &#x20B9;264"
-       });
+        amt.addEventListener("click", () => {
+            donate.innerHTML = " &#x20B9;264"
+        });
 
-       amt2.addEventListener("click",()=>{
-        donate.innerHTML = " &#x20B9;528"
-       });
+        amt2.addEventListener("click", () => {
+            donate.innerHTML = " &#x20B9;528"
+        });
+
+
+        // Wait for the DOM to load
+        document.addEventListener('DOMContentLoaded', () => {
+            const flashMessage = document.getElementById('flash-message');
+            if (flashMessage) {
+                // Hide the message after 5 seconds
+                setTimeout(() => {
+                    flashMessage.style.opacity = '0';
+                }, 3000);
+
+                // Remove the message from the DOM after the fade-out
+                setTimeout(() => {
+                    flashMessage.remove();
+                }, 4000); // 1s after opacity change to ensure smooth transition
+            }
+        });
 
     </script>
     <% include ./partial/footer.ejs %>
-    
