--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
@@ -5,6 +5,8 @@ body{
   width: 100%;
   overflow: hidden;
 }
+
+
 #svg1{
     color: #fff;
     /* margin: 0px 10px; */
@@ -56,6 +58,7 @@ body{
   .menu .contenercardx{
     display: flex;
     /* margin-bottom: -10vh; */
+    font-family: 'Helvetica', sans-serif;
   }
   
   .menu li{
@@ -101,6 +104,7 @@ body{
   .menu h3{
     font-size: 27px;
     margin-bottom: 16px;
+    font-family: 'Futura', sans-serif;
   }
 
 
@@ -123,11 +127,13 @@ body{
     text-align: start;
     padding-bottom: 100px;
     color: #cdc9c9;
+    font-family: 'Futura', sans-serif;
 }
 
 .bar .card h4{
   text-align: center;
   color: #cdc9c9;
+  font-family: 'Futura', sans-serif;
 }
 
 
@@ -137,7 +143,6 @@ body{
   justify-content: center;
   gap: 10px;
   margin-top: 5px;
-  
 }
 
 .bar .card .card1 h3{
@@ -148,6 +153,8 @@ body{
   border-radius: 30px;
   color: #cdc9c9;
   margin-bottom: 50px;
+  font-family: 'Helvetica', sans-serif;
+  font-weight: 400;
 }
 
 
@@ -226,6 +233,7 @@ body{
   color: #cdc9c9;
   /* margin-left: 33px; */
   margin-top: 20px;
+  font-family: 'Futura', sans-serif;
 }
 
 
@@ -234,6 +242,7 @@ body{
   margin-left: 5px;
   padding: 10px 50px;
   border-radius: 30px;
+  font-family:'Helvetica', sans-serif;
 }
 
 
