--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/menu.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/menu.css
@@ -41,6 +41,8 @@ body{
     display: block;
 
   }
+
+
 .menu{
     height: 100vh;
     width: 100%;
@@ -64,6 +66,7 @@ body{
     list-style-type: none;
     font-size: 20px;
     font-weight: 100;
+    font-family: 'Helvetica', sans-serif;
   }
   
   
@@ -82,7 +85,7 @@ body{
   
   .menu .cardx li{
     color:rgb(174, 168, 168);
-    font-size: 20px;    
+    font-size: 20px; 
   }
   
   .menu .cardy li{
@@ -105,11 +108,12 @@ body{
   }
 
   .menu .bar .card a{
-    font-size: 7vh;
+    font-size: 6vh;
     font-weight: 1000;
     text-transform: uppercase;
     text-decoration: none;
     color: #cdc9c9;
+    font-family: 'Futura', sans-serif;
     
   }
 
@@ -244,7 +248,7 @@ body{
 
   .menu .bar .card a{
     /* color: yellow; */
-    font-size: 10vw;
+    font-size: 7vw;
 
   }
   .menu .bar li{
