--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/contact.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/contact.css
@@ -6,6 +6,11 @@
     opacity: 1;
 }
 
+.page1{
+    /* background-color: red; */
+    padding: 10px 20px;
+    padding-top: 100px;
+}
 
 
 /* contact page2 styling */
