modify code for locomotive scrolling

--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
@@ -101,7 +101,7 @@ body::-webkit-scrollbar-thumb{
 #svg1{
     color: #fff;
     /* margin: 0px 10px; */
-    background-color: #111;
+    /* background-color: #111; */
 }
 
 .header-nav .nav-part2 a{
