--- a/backend/pratise backend/practice project pin/pin/views/catringPrduct/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catringPrduct/catering.ejs
@@ -66,5 +66,24 @@
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <!-- <script src="/javascripts/catring.js"></script> -->
+    <script>
 
+        // function scrollTriger() {
+
+        //     const scroll = new LocomotiveScroll({
+        //         el: document.querySelector('.main'),
+        //         smooth: true,
+        //         mobile: {
+        //             smooth: true
+        //         },
+        //         smoothMobile: true,
+        //         tablet: {
+        //             smooth: true
+        //         },
+        //         firefoxMultiplier: 50
+        //     });
+        // };
+
+
+    </script>
     <% include .//../catringPrduct/partial/cFooter.ejs %>
