--- a/reactjs/react practise/postFullStack project/frontend/src/App.css
+++ b/reactjs/react practise/postFullStack project/frontend/src/App.css
@@ -25,7 +25,7 @@
   position: absolute;
   z-index: 100;
 
-} */
+}
 
 
 
@@ -233,6 +233,7 @@
   opacity: 1;
   transform: translateY(0);
 }
+
 
 
 
