next and pet project work

--- a/reactjs/SevenReactjs/Projects/PetsAdoption/src/App.css
+++ b/reactjs/SevenReactjs/Projects/PetsAdoption/src/App.css
@@ -70,3 +70,12 @@
     color: red;
 
   }
+
+
+
+  /* top product card */
+  #topproduct:hover{
+    /* background-color: rebeccapurple; */
+    transition: all 0.8s;
+    scale: 1.1;
+  }
